grammar.js
    program: ($) => repeat($.statement),

    identifier: (_) => {
      const alpha =
        /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;

      const alphanumeric =
        /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    comment: (_) => token(seq("//", /[^\r\n\u2028\u2029]*/)),

    //
    // Import statement
    //

    // to name the node of literal "import" within rules like import_statement
    member_expression: ($) =>
      prec(
        "member",
        seq(
          field("object", $.primary_expression),
          ".",
          field("property", $._property_name),
        ),
      ),

    // TODO: I don't understand why can't I use attribute like what python does
    //
    // member_expression and attribute has the same left and right part. So I comment attribute, I don't know why I use the two same thing. Maybe the unfamiliarity of the tree-sitter rules
    // attribute: ($) =>
    //   prec(
    //     "member",
    //     seq(
    //       field("object", $.primary_expression),
    //       ".",
    //       field("property", $.identifier),
    //     ),
    //   ),

    //
    // Statements
    //

    expression_statement: ($) => seq($.expression, $.empty_statement),

    variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        choice("var", "const"),
        $.variable_declarator,
        ";",
      ),

    variable_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional(
          choice(
            seq("=", field("value", $.expression)),
            seq("as", field("type", $.type)),
            seq("=", field("value", $.expression), "as", field("type", $.type)),
            seq("as", field("type", $.type), "=", field("value", $.expression)),
          ),
        ),
      ),

    // statement_block in monkeyc don't need to append ";"
    statement_block: ($) => seq("{", repeat($.statement), "}"),

    else_clause: ($) => seq("else", $.statement),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    empty_statement: (_) => ";",

    //
    // Statement components
    //

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    //
    // Pattern
    //

    parameter: ($) => choice($.identifier, $.typed_parameter),

    typed_parameter: ($) =>
      prec(-1, seq($.identifier, "as", field("type", $.type))),
    type: ($) =>
      choice(
        prec(1, $.identifier),
        $.type_null,
        $.union_type,
        $.constrained_type,
        $.member_type,
        $.generic_type,
        $.array_type,
      ),
    array_access: ($) =>
      prec.left(
        seq(
          field("array", $.primary_expression),
          "[",
          field("index", $.expression),
          "]",
          optional($.typed_parameter),
        )
      ),

    symbol: ($) => {
      const alpha =
        /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;

      const alphanumeric =
        /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;
      return token(seq(":", alpha, repeat(alphanumeric)));
    },
    array: ($) => seq("[", commaSep(optional(choice($.array_unit, $.array))), "]"),
    typed_array: ($) =>
      prec.left(1, seq($.array, seq("as", field("type", $.type)))),
    array_class: ($) => seq("Array", "<", choice($.type, $.array_class), ">"),
    // array_class: ($) => seq("Array", "<", $.identifier, ">"),

    dictionary: ($) => seq("{", commaSep1($.pair), optional(","), "}"),

    pair: ($) =>
      seq(field("key", $.expression), "=>", field("value", $.expression)),

    class_declaration: ($) =>
      prec(
        "declaration",
        seq(
          optional($.annotation),
          optional($.modifiers),
          "class",
          field("name", $.identifier),
          optional($.class_heritage),
          field("body", $.class_body),
        ),
      ),
    modifiers: ($) =>
      repeat1(
        choice("public", "protected", "private", "static", "final", "default"),
      ),

    function_declaration: ($) =>
      prec.left(
        "declaration",
        seq(
          "function",
          field("name", $.identifier),
          field("parameters", $.formal_parameters),
          optional(seq("as", $.type)),
          field("body", $.statement_block),
        ),
      ),
    // Override
    // _call_signature: ($) => field("parameters", $.formal_parameters),

    call_expression: ($) =>
      prec(
        "call",
        seq(
          field("function", $.primary_expression),
          field("arguments", $.arguments),
        ),
      ),

    // NOTE: I do not fully get it through, but this does useful in monkeyc
    new_expression: ($) =>
      prec.right(
        "new",
        seq(
          "new",
          field("constructor", choice($.primary_expression, $.new_expression)),
          field("arguments", optional(prec.dynamic(1, $.arguments))),
        ),
      ),

    // both js and python uses pattern for left part.
    // difference is that they uses _lhs_expression or _lhs_hand_side
    // I don't know if it is needed, so I just extract the pattern
    // from those choice expressions it means an identifier or dotted_names
    assignment_expression: ($) =>
      prec.right(
        "assign",
        seq(
          field("left", $.pattern),
          choice(
            seq("=", field("right", $.expression)),
            seq("=", field("right", $.expression), "as", field("type", $.type)),
          ),
        ),
      ),

    // the reason I use $.attribute instead of $.dotted_names here is
    // to emphasize the affiliation between $.identifier
    // and prec of dotted_names is too low. The left part of dotted_names lacks expressiveness power
    pattern: ($) => choice($.identifier, $.member_expression, $.array_access),

    // _augmented_assignment_lhs: ($) =>
    //   choice($.identifier, $.parenthesized_expression,$.member_expression,),

    augmented_assignment_expression: ($) =>
      prec.right(
        "assign",
        seq(
          field("left", $.pattern),
          field(
            "operator",
            choice(
              "+=",
              "-=",
              "*=",
              "/=",
              "%=",
              "^=",
              "&=",
              "|=",
              "&&=",
              "||=",
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["&&", "logical_and"],
          ["and", "logical_and"],
          ["||", "logical_or"],
          ["or", "logical_or"],
          [">>", "binary_shift"],
          ["<<", "binary_shift"],
          ["&", "bitwise_and"],
          ["^", "bitwise_xor"],
          ["|", "bitwise_or"],
          ["+", "binary_plus"],
          ["-", "binary_plus"],
          ["*", "binary_times"],
          ["/", "binary_times"],
          ["%", "binary_times"],
          ["<", "binary_relation"],
          ["<=", "binary_relation"],
          ["==", "binary_equality"],
          ["!=", "binary_equality"],
          [">=", "binary_relation"],
          [">", "binary_relation"],
          ["instanceof", "binary_relation"],
          ["has", "binary_has"],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec.left(
        "unary_void",
        seq(
          field("operator", choice("!", "~", "-", "+", "instanceof", "as")),
          field("argument", $.expression),
        ),
      ),

    // monkeyc does have this, but I'm not sure if there are difference
    // between these two.
    update_expression: ($) =>
      prec.left(
        choice(
          seq(
            field("argument", $.expression),
            field("operator", choice("++", "--")),
          ),
          seq(
            field("operator", choice("++", "--")),
            field("argument", $.expression),
          ),
        ),
      ),

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($.unescaped_double_string_fragment, $.string_fragment),
              $.escape_sequence,
            ),
          ),
          '"',
        ),
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    escape_sequence: (_) => token.immediate(/\\['"ntr\\u]/),

    number: (_) => {
      const hexLiteral = seq(
        choice('0x', '0X'),
        /[\da-fA-F](_?[\da-fA-F])*/,
      );

      const decimalDigits = /\d+/;

      const signedInteger = seq(optional(choice('-', '+')), decimalDigits);
      const exponentPart = seq(choice('e', 'E'), signedInteger);
      const decimalIntegerLiteral = choice(
        "0",
        seq(
          optional("0"),
          /[1-9]/,
          optional(seq(optional("_"), decimalDigits)),
        ),
      );

      const decimalLiteral = choice(
        seq(decimalIntegerLiteral, '.', optional(decimalDigits), optional(exponentPart)),
        seq('.', decimalDigits, optional(exponentPart)),
        seq(decimalIntegerLiteral, exponentPart),
        decimalDigits,
      );


      return token(choice(hexLiteral, decimalLiteral));
    },

    null: (_) => "null",

    //
    // Expression components
    //

    arguments: ($) => seq("(", commaSep(optional($.expression)), ")"),

    class_body: ($) =>
      seq(
        "{",
        repeat(
          seq(field("member", choice($.method_definition, $.field_definition))),
        ),
        "}",
      ),

    field_definition: ($) =>
      seq(
        optional($.modifiers),
        choice("var", "const"),
        field("property", $._property_name),
        optional(
          choice(
            seq("=", field("value", $.expression)),
            seq("as", field("type", $.type)),
            seq("=", field("value", $.expression), "as", field("type", $.type)),
            seq("as", field("type", $.type), "=", field("value", $.expression)),
          ),
        ),
        ";",
      ),

    formal_parameters: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    method_definition: ($) =>
      seq(
        optional($.annotation),
        optional($.modifiers),
        "function",
        field("name", $._property_name),
        field("parameters", $.formal_parameters),
        optional(seq("as", field("return_type", $.type))),
        field("body", $.statement_block),
      ),

    // the only reason I extract it is just to reuse it.
    // I don't know if it would occupy more resource
    // TODO: test resource cause for this or learn the functionality
    _property_name: ($) => alias($.identifier, $.property_identifier),

    // _semicolon: ($) => choice($._automatic_semicolon, ";"),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ",");
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
